in the process of changing parameter names; also, about to remove vk build/sim from benchmarking variant calling methods and will instead replace with download link

--- a/notebooks/2_2_gatk_workflow.ipynb
+++ b/notebooks/2_2_gatk_workflow.ipynb
@@ -19,7 +19,7 @@
     "import pysam\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "from varseek.utils import calculate_metrics, draw_confusion_matrix, create_venn_diagram, calculate_sensitivity_specificity, create_stratified_metric_bar_plot, add_vcf_info_to_cosmic_tsv, merge_gatk_and_cosmic"
+    "from varseek.utils import calculate_metrics, draw_confusion_matrix, create_venn_diagram, calculate_sensitivity_specificity, create_stratified_metric_bar_plot, add_vcf_info_to_cosmic_tsv, merge_gatk_and_cosmic, vcf_to_dataframe, safe_literal_eval"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "ensembl_germline_vcf = \"/home/jrich/data/varseek_data/reference/ensembl_grch37_release93/homo_sapiens.vcf\"\n",
     "star_genome_dir = \"/home/jrich/data/varseek_data/reference/ensembl_grch37_release93/star_reference\"\n",
     "\n",
-    "STAR = \"/home/jrich/opt/STAR-2.7.11b/source/STAR\"\n",
+    "STAR = \"/home/jrich/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR\"\n",
     "java = \"/home/jrich/opt/java/jdk-17.0.12+7/bin/java\"\n",
     "picard_jar = \"/home/jrich/opt/picard/build/libs/picard.jar\"\n",
     "gatk = \"/home/jrich/opt/gatk-4.6.0.0/gatk\""
@@ -2824,8 +2824,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from varseek.utils import vcf_to_dataframe\n",
-    "\n",
     "# Convert VCF to DataFrame\n",
     "df_hap = vcf_to_dataframe(haplotypecaller_vcf_final, additional_columns = True)\n",
     "df_mut = vcf_to_dataframe(mutect2_vcf_final, additional_columns = True)\n",
@@ -2873,8 +2871,6 @@
     "# load in unique_mcrs_df\n",
     "unique_mcrs_df = pd.read_csv(unique_mcrs_df_path)\n",
     "unique_mcrs_df.rename(columns={'received_an_aligned_read': 'mutation_detected_varseek', 'number_of_reads_aligned_to_this_item': 'DP_varseek', 'mutation_expression_prediction_error': 'mutation_expression_prediction_error_varseek', 'TP_crude': 'TP_varseek', 'FP_crude': 'FP_varseek', 'TN_crude': 'TN_varseek', 'FN_crude': 'FN_varseek', 'TP': 'TP_varseek_read_specific', 'FP': 'FP_varseek_read_specific', 'TN': 'TN_varseek_read_specific', 'FN': 'FN_varseek_read_specific'}, inplace=True)\n",
-    "\n",
-    "from varseek.utils import safe_literal_eval\n",
     "unique_mcrs_df[\"header_list\"] = unique_mcrs_df[\"header_list\"].apply(safe_literal_eval)"
    ]
   },
