continuing to update varseek info parameters; about to move STAR alignment into preprocessing for benchmarking notebook

--- a/notebooks/2_2_gatk_workflow.ipynb
+++ b/notebooks/2_2_gatk_workflow.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "STAR = \"/home/jrich/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR\"\n",
     "java = \"/home/jrich/opt/java/jdk-17.0.12+7/bin/java\"\n",
-    "picard_jar = \"/home/jrich/opt/picard/build/libs/picard.jar\"\n",
+    "picard_jar = \"/home/jrich/opt/picard.jar\"  # previously in picard/build/libs\n",
     "gatk = \"/home/jrich/opt/gatk-4.6.0.0/gatk\""
    ]
   },
