finished renaming parameters for varseek build, info, filter

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -54,13 +54,13 @@
     "\n",
     "# vk filter\n",
     "fasta_filters = [\n",
-    "    \"dlist_substring-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
-    "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
-    "    \"dlist-equal=none\",  #*** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
-    "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"longest_homopolymer_length-bottompercent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99% (fraction 0.9999) ie filters out the top 0.01%\n",
-    "    \"triplet_complexity-toppercent=99.9\"  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9% (fraction 0.999) ie filters out the bottom 0.1%\n",
+    "    \"dlist_substring:equal=none\",  # filter out mutations which are a substring of the reference genome\n",
+    "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning:is_not_true\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
+    "    \"dlist:equal=none\",  #*** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
+    "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference:less_than=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
+    "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference:less_than=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
+    "    \"longest_homopolymer_length:bottom_percent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99% (fraction 0.9999) ie filters out the top 0.01%\n",
+    "    \"triplet_complexity:top_percent=99.9\"  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9% (fraction 0.999) ie filters out the bottom 0.1%\n",
     "]\n",
     "\n",
     "# kb ref\n",
@@ -174,7 +174,6 @@
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
     "    save_wt_mcrs_fasta_and_t2g=False,\n",
     "    save_mutations_updated_csv=True,\n",
-    "    mutations_updated_csv_out=update_df_out,\n",
     "    verbose=verbose,\n",
     ")"
    ]
@@ -194,9 +193,7 @@
    "source": [
     "# %%time\n",
     "vk.info(\n",
-    "    mutations = vk_build_mcrs_fa_path,\n",
-    "    updated_df=update_df_out,\n",
-    "    id_to_header_csv=id_to_header_csv,  # if none then assume no swapping occurred\n",
+    "    input_dir = out_dir_notebook,\n",
     "    columns_to_include=columns_to_include,\n",
     "    mcrs_id_column=\"mcrs_id\",\n",
     "    mcrs_sequence_column=\"mutant_sequence\",\n",
@@ -206,21 +203,17 @@
     "    mutation_cdna_column=\"mutation\",  # if input df has concatenated cdna and header MCRS's, then I want a way of mapping from cdna to genome\n",
     "    mutation_genome_column=\"mutation_genome\",  # if input df has concatenated cdna and header MCRS's, then I want a way of mapping from cdna to genome\n",
     "    gtf=gtf_path,  # for distance to nearest splice junction\n",
-    "    mutation_metadata_df_out_path=mutation_metadata_df_out_path_vk_info,\n",
-    "    out_dir_notebook=out_dir_notebook,\n",
-    "    reference_out_dir=reference_out_dir,\n",
-    "    dlist_reference_source=dlist_reference_source,\n",
-    "    ref_prefix=\"index\",\n",
+    "    out=out_dir_notebook,\n",
+    "    reference_out=reference_out_dir,\n",
     "    w=w,\n",
-    "    remove_Ns=remove_Ns,\n",
-    "    strandedness=vcrs_strandedness,\n",
+    "    vcrs_strandedness=vcrs_strandedness,\n",
     "    bowtie_path=bowtie_path,\n",
     "    near_splice_junction_threshold=near_splice_junction_threshold,\n",
     "    threads=threads,\n",
     "    reference_cdna_fasta=reference_cdna_fasta,\n",
     "    reference_genome_fasta=reference_genome_fasta,\n",
     "    mutations_csv=mutations_csv,\n",
-    "    save_exploded_df=save_exploded_df,\n",
+    "    save_mutations_updated_exploded_vk_info_csv=save_exploded_df,\n",
     "    verbose=verbose,\n",
     ")"
    ]
@@ -260,21 +253,9 @@
    ],
    "source": [
     "# %%time\n",
-    "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
-    "          mutation_metadata_df_exploded_path = mutation_metadata_df_exploded_path,\n",
-    "          output_mutation_metadata_df_exploded = output_mutation_metadata_df_exploded_vk_filter,\n",
-    "          output_mcrs_fasta=mcrs_fasta_vk_filter,\n",
-    "          output_metadata_df=output_metadata_df_vk_filter,\n",
-    "          dlist_fasta=dlist_fasta,\n",
-    "          output_dlist_fasta=dlist_fasta_vk_filter,\n",
-    "          output_wt_mcrs_fa=wt_mcrs_fa_vk_filter,\n",
-    "          output_t2g=t2g_vk_filter,\n",
-    "          output_t2g_wt=t2g_wt_vk_filter,\n",
-    "          id_to_header_csv=id_to_header_csv,\n",
-    "          output_id_to_header_csv=id_to_header_csv_vk_filter,\n",
-    "          verbose=True,\n",
-    "          return_df=False,\n",
-    "          filters = fasta_filters)"
+    "vk.filter(input_dir = out_dir_notebook,\n",
+    "          filters = fasta_filters,\n",
+    "          verbose=verbose,)"
    ]
   },
   {
