--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "# #!!! TEMP\n",
     "# sample_type = \"all\"\n",
-    "# conditions = ['dlist-equal=none', 'mcrs_is_substring-isnottrue', 'pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue']  # kmer_overlap_in_mcrs_reference-isnottrue\n",
+    "# conditions = ['dlist:equal=none', 'mcrs_is_substring:is_not_true', 'pseudoaligned_to_human_reference_despite_not_truly_aligning:is_not_true']  # kmer_overlap_in_mcrs_reference:is_not_true\n",
     "\n",
     "\n",
     "# if not os.path.exists(mutation_metadata_df_out) or not os.path.exists(read_df_out):\n",
@@ -274,11 +274,11 @@
     "# number_of_mutations_to_sample = 5\n",
     "# m_list = [1, 2, 3]\n",
     "# w_list = [0, 1, 2]\n",
-    "# conditions = ['mutation_type-equal=substitution', 'mutation_type-notequal=substitution']\n",
+    "# conditions = ['mutation_type:equal=substitution', 'mutation_type:not_equal=substitution']\n",
     "\n",
     "m_list = [1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256]\n",
     "w_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256]\n",
-    "conditions = ['mutation_type-equal=substitution', 'mutation_type-notequal=substitution', 'kmer_overlap_in_mcrs_reference-isfalse', 'kmer_overlap_in_mcrs_reference-istrue', 'is_near_splice_junction_10-isfalse', 'is_near_splice_junction_10-istrue']\n",
+    "conditions = ['mutation_type:equal=substitution', 'mutation_type:not_equal=substitution', 'kmer_overlap_in_mcrs_reference:is_false', 'kmer_overlap_in_mcrs_reference:is_true', 'is_near_splice_junction_10:is_false', 'is_near_splice_junction_10:is_true']\n",
     "\n",
     "random.shuffle(m_list)\n",
     "random.shuffle(w_list)\n",
@@ -289,7 +289,7 @@
     "        for wt_sequencing_depth in w_list:\n",
     "            for condition in conditions:\n",
     "                read_fq_path_specific = f\"{specific_fastq_selection}/synthetic_reads_m{mutant_sequencing_depth}_w{wt_sequencing_depth}_{condition.replace('=', '_')}.fq\"\n",
-    "                condition_added_list = [condition, 'included_in_synthetic_reads-isnottrue']\n",
+    "                condition_added_list = [condition, 'included_in_synthetic_reads-is_not_true']\n",
     "                \n",
     "                simulated_df_dict = vk.sim(\n",
     "                    mutation_metadata_df = mutation_metadata_df,\n",
