finished fastqpp parameter renaming

--- a/notebooks/7_3_dlist_source_tests.ipynb
+++ b/notebooks/7_3_dlist_source_tests.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "def create_header_and_sequence_set(dlist_fasta_file):\n",
     "    header_and_sequence_set = set()\n",
-    "    for header, sequence in read_fasta(dlist_fasta_file):\n",
+    "    for header, sequence in pyfastx.Fastx(dlist_fasta_file):\n",
     "        header_and_sequence_entry = header + \"_\" + sequence\n",
     "        header_and_sequence_set.add(header_and_sequence_entry)\n",
     "    return header_and_sequence_set\n",
