finished renaming varseek summarize parameters; about to sort imports with isort

--- a/notebooks/1_0_vk_ref_count_tutorial.ipynb
+++ b/notebooks/1_0_vk_ref_count_tutorial.ipynb
@@ -68,7 +68,7 @@
     "run_fastqc = False\n",
     "\n",
     "# kb count\n",
-    "assay = \"bulk\"  # \"bulk\" or \"sc\"  #!!! implement\n",
+    "technology = \"bulk\"  # \"bulk\" or \"sc\"  #!!! implement\n",
     "parity = \"single\"  # single or paired\n",
     "\n",
     "# vk clean\n",
