--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -95,7 +95,7 @@
     "import varseek.utils.seq_utils\n",
     "importlib.reload(varseek.utils.seq_utils)\n",
     "from varseek.utils.seq_utils import make_bus_df\n",
-    "bus_df = make_bus_df(kallisto_out = kb_count_out_test, fastq_file_list = rnaseq_fastq_files_final, t2g_file = test_t2g, mm = False, union = False, assay = \"bulk\", bustools = bustools)"
+    "bus_df = make_bus_df(kallisto_out = kb_count_out_test, fastq_file_list = rnaseq_fastq_files_final, t2g_file = test_t2g, mm = False, union = False, technology = \"bulk\", bustools = bustools)"
    ]
   }
  ],
