changed parameter names of all core functions; about to do sim and change docs now

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -649,7 +649,7 @@
     "            mutation_metadata_df['mcrs_id'] == mcrs_id, 'mcrs_sequence_length'\n",
     "        ]\n",
     "        \n",
-    "        # Check if there's a match and if the length is less than 55\n",
+    "        # Check if there's a match and if the length is less than 2*k-1\n",
     "        if not matching_length.empty and matching_length.iloc[0] < (2*k-1):\n",
     "            reason_for_fn_sublist.append(\"short_mcrs_id\")\n",
     "\n",
