cleaned up linting recommendations, bandit security recommendations, and removing absolute paths

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -133,10 +133,11 @@
     "#     inplace=True,\n",
     "# )\n",
     "\n",
-    "# sim_data_df[\"mutant_sequence_read_parent_rc\"] = sim_data_df[\"mutant_sequence_read_parent\"].apply(varseek.varseek_build.reverse_complement)\n",
+    "# from varseek.utils import reverse_complement\n",
+    "# sim_data_df[\"mutant_sequence_read_parent_rc\"] = sim_data_df[\"mutant_sequence_read_parent\"].apply(reverse_complement)\n",
     "# sim_data_df[\"mutant_sequence_read_parent_length\"] = sim_data_df[\"mutant_sequence_read_parent\"].str.len()\n",
     "\n",
-    "# sim_data_df[\"wt_sequence_read_parent_rc\"] = sim_data_df[\"wt_sequence_read_parent\"].apply(varseek.varseek_build.reverse_complement)\n",
+    "# sim_data_df[\"wt_sequence_read_parent_rc\"] = sim_data_df[\"wt_sequence_read_parent\"].apply(reverse_complement)\n",
     "# sim_data_df[\"wt_sequence_read_parent_length\"] = sim_data_df[\"wt_sequence_read_parent\"].str.len()\n",
     "\n",
     "# mutation_metadata_df = pd.merge(\n",
@@ -415,7 +416,7 @@
     "check_assertions = False\n",
     "!cat {kb_count_out}/run_info.json | grep -E '\"n_targets\"|\"n_processed\"|\"n_pseudoaligned\"|\"n_unique\"|\"p_pseudoaligned\"|\"p_unique\"'\n",
     "\n",
-    "with open(f\"{kb_count_out}/run_info.json\", 'r') as f:\n",
+    "with open(f\"{kb_count_out}/run_info.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "total_reads = data.get(\"n_processed\", None)\n",
