--- a/notebooks/7_3_dlist_source_tests.ipynb
+++ b/notebooks/7_3_dlist_source_tests.ipynb
@@ -15,13 +15,13 @@
    ],
    "source": [
     "import os\n",
-    "os.chdir('/home/jrich/Desktop/CART_prostate_sc')\n",
     "import subprocess\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from upsetplot import UpSet, from_contents\n",
+    "import pyfastx\n",
     "\n",
-    "from src.utils import convert_mutation_cds_locations_to_cdna, merge_gtf_transcript_locations_into_cosmic_csv, read_fasta, find_matching_sequences_through_fasta, merge_genome_into_transcriptome_fasta, create_mutant_t2g, parse_sam_and_extract_sequences, combine_transcriptome_fasta, get_set_of_headers_from_sam, filter_fasta, fasta_to_fastq, find_genes_with_aligned_reads_for_kb_extract, parse_fastq, remove_fasta_headers, extract_problematic_mutation_list, drop_duplication_mutations, improve_genome_strand_information, remove_mutations_which_are_a_perfect_substring_of_wt_reference_genome, remove_Ns_fasta, count_line_number_in_file, count_number_of_spliced_and_unspliced_headers, compute_unique_mutation_header_set, apply_enst_format, remove_dlist_duplicates, count_number_of_nonidentical_mutation_fragments, report_time, load_ipython_extension, count_number_of_total_mutations"
+    "from varseek.utils import get_set_of_headers_from_sam, parse_sam_and_extract_sequences"
    ]
   },
   {
@@ -34,7 +34,6 @@
     "bowtie_reference_folder_parent = f\"/home/jrich/Desktop/gget_mutate_project_clean_k{k}_transcriptome/data/TEMP_bowtie_tests\"\n",
     "mutation_reference_file_fasta = f\"/home/jrich/Desktop/gget_mutate_project_clean_k{k}_transcriptome/data/mutant_reference/cancer_mutant_reference_transcriptome_cdna.fa\"  # before any filtering\n",
     "threads = 32\n",
-    "bowtie_path = \"/home/jrich/opt/bowtie2-2.5.4\"\n",
     "\n",
     "ensembl_version_dlist_grch37 = 93\n",
     "ensembl_version_dlist_grch38 = 112\n",
@@ -79,12 +78,9 @@
     "    with open(file_path, \"r\") as file:\n",
     "        return {line.strip() for line in file}\n",
     "\n",
-    "def run_full_alignment_workflow(bowtie_reference_folder_parent, mutation_reference_file_fasta, reference_source, bowtie_path, dfk_length = None, threads = 32, k = 31, release = None, dry_run = False):\n",
-    "    if int(bowtie_path[-3]) >= 5:  # minor version >= 5\n",
-    "        bowtie_path = f'{bowtie_path}/bowtie2-2.5.4-linux-x86_64'\n",
-    "\n",
-    "    bowtie2_build = f\"{bowtie_path}/bowtie2-build\"\n",
-    "    bowtie2 = f\"{bowtie_path}/bowtie2\"\n",
+    "def run_full_alignment_workflow(bowtie_reference_folder_parent, mutation_reference_file_fasta, reference_source, dfk_length = None, threads = 32, k = 31, release = None, dry_run = False):\n",
+    "    bowtie2_build = \"bowtie2-build\"\n",
+    "    bowtie2 = \"bowtie2\"\n",
     "    \n",
     "    bowtie_genome_reference_folder = f\"{bowtie_reference_folder_parent}/{reference_source}_genome_bowtie_reference/index\"\n",
     "    bowtie_cdna_reference_folder = f\"{bowtie_reference_folder_parent}/{reference_source}_transcriptome_bowtie_reference/index\"\n",
@@ -244,9 +240,9 @@
     }
    ],
    "source": [
-    "sequence_names_set_genome_t2t, sequence_names_set_cdna_t2t, header_and_sequence_set_genome_t2t, header_and_sequence_set_cdna_t2t = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"t2t\", release = None, bowtie_path = bowtie_path, dfk_length = dfk_length, threads = threads, k = k)\n",
-    "sequence_names_set_genome_grch38, sequence_names_set_cdna_grch38, header_and_sequence_set_genome_grch38, header_and_sequence_set_cdna_grch38 = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"grch38\", release = ensembl_version_dlist_grch38, bowtie_path = bowtie_path, dfk_length = dfk_length, threads = threads, k = k)\n",
-    "sequence_names_set_genome_grch37, sequence_names_set_cdna_grch37, header_and_sequence_set_genome_grch37, header_and_sequence_set_cdna_grch37 = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"grch37\", release = ensembl_version_dlist_grch37, bowtie_path = bowtie_path, dfk_length = dfk_length, threads = threads, k = k)"
+    "sequence_names_set_genome_t2t, sequence_names_set_cdna_t2t, header_and_sequence_set_genome_t2t, header_and_sequence_set_cdna_t2t = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"t2t\", release = None, dfk_length = dfk_length, threads = threads, k = k)\n",
+    "sequence_names_set_genome_grch38, sequence_names_set_cdna_grch38, header_and_sequence_set_genome_grch38, header_and_sequence_set_cdna_grch38 = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"grch38\", release = ensembl_version_dlist_grch38, dfk_length = dfk_length, threads = threads, k = k)\n",
+    "sequence_names_set_genome_grch37, sequence_names_set_cdna_grch37, header_and_sequence_set_genome_grch37, header_and_sequence_set_cdna_grch37 = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"grch37\", release = ensembl_version_dlist_grch37, dfk_length = dfk_length, threads = threads, k = k)"
    ]
   },
   {
@@ -464,7 +460,7 @@
    ],
    "source": [
     "#*** to recreate headers to remove for synthetic read tests, uncomment the line below and simply run the import/hyperparameter/definition files and then this cell and all below\n",
-    "# sequence_names_set_genome_grch37, sequence_names_set_cdna_grch37, header_and_sequence_set_genome_grch37, header_and_sequence_set_cdna_grch37 = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"grch37\", release = ensembl_version_dlist_grch37, bowtie_path = bowtie_path, dfk_length = dfk_length, threads = threads, k = k)\n",
+    "# sequence_names_set_genome_grch37, sequence_names_set_cdna_grch37, header_and_sequence_set_genome_grch37, header_and_sequence_set_cdna_grch37 = run_full_alignment_workflow(bowtie_reference_folder_parent = bowtie_reference_folder_parent, mutation_reference_file_fasta = mutation_reference_file_fasta, reference_source = \"grch37\", release = ensembl_version_dlist_grch37, dfk_length = dfk_length, threads = threads, k = k)\n",
     "\n",
     "mutation_reference_file_fasta_and_bowtie_grch37_cdna = f\"/home/jrich/Desktop/gget_mutate_project_clean_k{k}_transcriptome/data/mutant_reference/cancer_mutant_reference_transcriptome_cdna_filtered_bowtie_cdna_grch37.fa\"\n",
     "mutation_reference_file_fastQ_and_bowtie_grch37_cdna = f\"/home/jrich/Desktop/gget_mutate_project_clean_k{k}_transcriptome/data/mutant_reference/cancer_mutant_reference_transcriptome_cdna_filtered_bowtie_cdna_grch37.fastq\"\n",
