--- a/notebooks/pull_out_reads_for_alignment_viz.ipynb
+++ b/notebooks/pull_out_reads_for_alignment_viz.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path to COSMIC gget mutate data frame\n",
+    "# Path to COSMIC vk build data frame\n",
     "cosmic_gget_mut_df = \"/home/jrich/data/varseek_data/reference/cosmic/CancerMutationCensus_AllData_Tsv_v100_GRCh37/CancerMutationCensus_AllData_v100_GRCh37_mutation_workflow_with_cdna.csv\"\n",
     "mcrs_fa_path = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_ensembl93/mcrs_filtered.fa\"\n",
     "base_out = \"/home/jrich/data/varseek_data_fresh/alignment_visualization\"\n",
