--- a/notebooks/1_0_vk_ref_count_tutorial.ipynb
+++ b/notebooks/1_0_vk_ref_count_tutorial.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import varseek as vk"
    ]
   },
@@ -16,94 +17,44 @@
    "outputs": [],
    "source": [
     "# Required\n",
-    "mutations = \"/home/jrich/data/varseek_data_fresh/reference/cosmic/CancerMutationCensus_AllData_Tsv_v100_GRCh37/CancerMutationCensus_AllData_v100_GRCh37_mutation_workflow_with_cdna.csv\"  # \"cosmic_cmc\"  # file path to mutations csv/tsv file OR one of the supported databases - eg cosmic_cmc\n",
-    "sequences = \"/home/jrich/data/varseek_data_fresh/reference/ensembl_grch37_release93/Homo_sapiens.GRCh37.cdna.all.fa\"  # cdna  # file path to reference sequence fasta file OR, only if 'mutations' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for gget mutate\n",
+    "mutations = \"cosmic_cmc\"  # \"cosmic_cmc\"  # file path to mutations csv/tsv file OR one of the supported databases - eg cosmic_cmc\n",
+    "sequences = \"cdna\"  # cdna  # file path to reference sequence fasta file OR, only if 'mutations' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for vk build\n",
     "rnaseq_fastq_files = \"\"  # pass as a single string or as a list of strings (if paired-end, then pass each pair sequentially with R1 preceding R2)\n",
     "\n",
+    "# General\n",
+    "verbose = True\n",
+    "w = 54  # window size for varseek build (should be at least 1 less than kallisto k)\n",
+    "k = 59\n",
+    "threads = 4\n",
     "\n",
-    "# Optional\n",
-    "verbose=True\n",
-    "w=54  # window size for varseek build (should be at least 1 less than kallisto k)\n",
-    "k=59\n",
-    "threads = 32\n",
-    "remove_Ns = True\n",
-    "strand = \"unstranded\"  # \"forward\", \"reverse\", or \"unstranded\"\n",
-    "strandedness = False  # strandedness for gget mutate and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
-    "\n",
-    "# vk build\n",
+    "# vk ref\n",
+    "download = False  # download vk ref index and t2g\n",
+    "filters=(\n",
+    "    \"dlist_substring:equal=none\",  # filter out mutations which are a substring of the reference genome\n",
+    "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning:is_not_true\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
+    "    \"dlist:equal=none\",  # *** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
+    "    \"longest_homopolymer_length:bottom_percent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99% (fraction 0.9999) ie filters out the top 0.01%\n",
+    "    \"triplet_complexity:top_percent=99.9\",  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9% (fraction 0.999) ie filters out the bottom 0.1%\n",
+    ")\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
     "# os.environ['COSMIC_PASSWORD'] = 'your_password'  # to avoid being prompted for password in varseek build\n",
+    "dlist_reference_source = \"T2T\"\n",
+    "dlist = \"None\"  # path to dlist fasta file or \"None\" (including the quotes)\n",
     "\n",
-    "# vk info\n",
-    "columns_to_include=\"all\"\n",
-    "dlist_reference_source = \"ensembl_grch37_release93\"  # ensembl_grchNUMBER_releaseNUMBER or t2t - eg ensembl_grch37_release93\n",
-    "near_splice_junction_threshold=10\n",
-    "save_exploded_df=True\n",
-    "\n",
-    "# vk filter\n",
-    "fasta_filters = [\n",
-    "    \"dlist_substring-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
-    "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
-    "    \"dlist-equal=none\",  #*** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
-    "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"longest_homopolymer_length-max=999999\",  # filters out MCRSs with repeating single nucleotide - eg 6\n",
-    "    \"triplet_complexity-min=0\"  # filters out MCRSs with repeating triplets - eg 0.2\n",
-    "]\n",
-    "\n",
-    "# kb ref\n",
-    "dlist_kb_argument = \"None\"  # path to dlist fasta file or \"None\" (including the quotes)\n",
-    "\n",
-    "# vk fastqpp\n",
-    "trim_edges_off_reads = False\n",
-    "minimum_base_quality_trim_reads=13\n",
-    "qualified_quality_phred = None\n",
-    "unqualified_percent_limit = None\n",
-    "n_base_limit = None\n",
-    "length_required = None\n",
-    "replace_low_quality_bases_with_N = False\n",
-    "minimum_base_quality_replace_with_N=13\n",
-    "split_reads_by_Ns = False\n",
-    "run_fastqc = False\n",
-    "\n",
-    "# kb count\n",
+    "# vk count\n",
+    "strand = \"unstranded\"  # \"forward\", \"reverse\", or \"unstranded\"\n",
     "technology = \"bulk\"  # \"bulk\" or \"sc\"  #!!! implement\n",
     "parity = \"single\"  # single or paired\n",
-    "\n",
-    "# vk clean\n",
-    "minimum_count_filter = None  #!!! still need to tune this  \n",
-    "use_binary_matrix = False\n",
-    "drop_zero_columns = False\n",
+    "min_counts = 2\n",
     "filter_cells_by_min_counts = True  # True for auto-filter, numeric for set filter, None/False otherwise\n",
     "filter_cells_by_min_genes = 200\n",
     "filter_genes_by_min_cells = 3\n",
-    "filter_cells_by_max_mt_content = False\n",
-    "doublet_detection = True\n",
-    "remove_doublets = False\n",
-    "do_cpm_normalization = True\n",
-    "split_reads_by_Ns = False\n",
-    "dlist_file = None\n",
-    "mutation_metadata_df_columns = None  #!!! replace\n",
-    "\n",
     "\n",
     "# Paths\n",
-    "out_dir_base = \"/home/jrich/data/varseek_data_fresh\"\n",
-    "run_name = \"vk_build_pipeline_grch37_nov12\"\n",
-    "\n",
-    "# vk info\n",
-    "bowtie_path=\"/home/jrich/opt/bowtie2-2.5.4/bowtie2-2.5.4-linux-x86_64\"\n",
-    "mutations_csv=\"/home/jrich/data/varseek_data_fresh/reference/cosmic/CancerMutationCensus_AllData_Tsv_v100_GRCh37/CancerMutationCensus_AllData_v100_GRCh37_with_cdna.csv\"\n",
-    "reference_cdna_fasta=\"/home/jrich/data/varseek_data_fresh/reference/ensembl_grch37_release93/Homo_sapiens.GRCh37.cdna.all.fa\"  # the one that matches up to mutation df annotations\n",
-    "reference_genome_fasta=\"/home/jrich/data/varseek_data_fresh/reference/ensembl_grch37_release93/Homo_sapiens.GRCh37.dna.primary_assembly.fa\"  # the one that matches up to mutation df annotations\n",
-    "gtf_path=\"/home/jrich/data/varseek_data_fresh/reference/ensembl_grch37_release93/Homo_sapiens.GRCh37.87.gtf\"  # the one that matches up to mutation df annotations\n",
-    "seqtk=\"seqtk\"\n",
-    "fastp=\"fastp\"\n",
-    "\n",
-    "# vk clean\n",
-    "mutation_metadata_df_path = None  #!!! replace\n",
-    "standard_index = \"\"\n",
-    "standard_t2g = \"\""
+    "data_directory = os.path.dirname(os.path.abspath(\"\"))  # if this notebook resides in varseek/notebooks/0_data_download.ipynb, then this retrieves varseek\n",
+    "out_dir = os.path.join(data_directory, \"data\", \"vk_build_pipeline_notebook1\")\n",
+    "reference_out_dir = os.path.join(data_directory, \"data\", \"reference\")"
    ]
   },
   {
@@ -112,7 +63,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vk_ref_output_dict = vk.ref()\n",
+    "vk_ref_output_dict = vk.ref(\n",
+    "    mutations=mutations,  # build\n",
+    "    sequences=sequences,\n",
+    "    w=w,\n",
+    "    k=k,\n",
+    "    cosmic_version=cosmic_version,\n",
+    "    dlist_reference_source=dlist_reference_source,  # info\n",
+    "    filters=filters,  # filter\n",
+    "    dlist=dlist,  # kb ref\n",
+    "    out=out_dir,  # general\n",
+    "    reference_out_dir=reference_out_dir,\n",
+    "    download=download,\n",
+    "    threads=threads,\n",
+    "    verbose=verbose,\n",
+    ")\n",
     "\n",
     "index = vk_ref_output_dict[\"index\"]\n",
     "t2g = vk_ref_output_dict[\"t2g\"]"
@@ -124,8 +89,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vk_count_output_dict = vk.clean()\n",
-    "print(vk_count_output_dict)"
+    "print(f\"Find index at {index}\")\n",
+    "print(f\"Find t2g at {t2g}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vk_count_output_dict = vk.count(\n",
+    "    index=index,  # kb count  # fastqpp omitted\n",
+    "    t2g=t2g,\n",
+    "    rnaseq_fastq_files=rnaseq_fastq_files,\n",
+    "    technology=technology,\n",
+    "    strand=strand,\n",
+    "    parity=parity,\n",
+    "    min_counts=min_counts,  # clean\n",
+    "    filter_cells_by_min_counts=filter_cells_by_min_counts,\n",
+    "    filter_cells_by_min_genes=filter_cells_by_min_genes,\n",
+    "    filter_genes_by_min_cells=filter_genes_by_min_cells,  # summarize omitted\n",
+    "    out=out_dir,  # general\n",
+    "    reference_out_dir=reference_out_dir,\n",
+    "    threads=threads,\n",
+    "    verbose=verbose,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Find summarized results in {vk_count_output_dict['vk_summarize_output_dir']}\")\n",
+    "print(f\"Find the processed adata object for further analysis in {vk_count_output_dict['adata_path']}\")"
    ]
   }
  ],
