continuing to alter parameters; now about to change strand behavior in vk sim

--- a/notebooks/0_data_download.ipynb
+++ b/notebooks/0_data_download.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import os\n",
     "from varseek.utils import make_entex_df, download_entex_fastq_links\n",
-    "data_directory = os.path.dirname(os.path.abspath(\"\"))  # if this notebook resides in varseek/notebooks/0_data_download.ipynb, then this retrieves varseek\n",
-    "sequencing_data_download_base = os.path.join(data_directory, \"data\", \"sequencing\")\n",
+    "varseek_directory = os.path.dirname(os.path.abspath(\"\"))  # if this notebook resides in varseek/notebooks/0_data_download.ipynb, then this retrieves varseek\n",
+    "sequencing_data_download_base = os.path.join(varseek_directory, \"data\", \"sequencing\")\n",
     "os.makedirs(sequencing_data_download_base, exist_ok=True)"
    ]
   },
