updated parameter names for vk sim

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -2,26 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(6 // 2) * 2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -207,18 +187,17 @@
    "outputs": [],
    "source": [
     "# #!!! TEMP\n",
-    "# sample_type = \"all\"\n",
     "# conditions = ['dlist:equal=none', 'mcrs_is_substring:is_not_true', 'pseudoaligned_to_human_reference_despite_not_truly_aligning:is_not_true']  # kmer_overlap_in_mcrs_reference:is_not_true\n",
     "\n",
     "\n",
     "# if not os.path.exists(mutation_metadata_df_out) or not os.path.exists(read_df_out):\n",
     "#     simulated_df_dict = vk.sim(\n",
-    "#         mutation_metadata_df = mutation_metadata_df,\n",
-    "#         fastq_output_path = synthetic_reads_fastQ,\n",
-    "#         sample_type=sample_type,\n",
+    "#         mutations = mutation_metadata_df,\n",
+    "#         reads_fastq_out = synthetic_reads_fastQ,\n",
     "#         number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
     "#         strand=strand,\n",
-    "#         number_of_reads_per_sample=\"all\",  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
+    "#         number_of_reads_per_mutation_m=\"all\",\n",
+    "#         number_of_reads_per_mutation_w=\"all\",\n",
     "#         k=k,  # used in vk build with the respective index\n",
     "#         w=w,  # used in vk build with the respective index\n",
     "#         read_length=read_length,\n",
@@ -229,17 +208,16 @@
     "#         max_errors=max_errors,\n",
     "#         with_replacement=False,\n",
     "#         sequences=sequences,\n",
-    "#         mutation_metadata_df_path=mutation_metadata_df_path,\n",
     "#         seq_id_column=seq_id_column,\n",
     "#         mut_column=mut_column,\n",
     "#         reference_out_dir=reference_out_dir,\n",
-    "#         out_dir_vk_build=out_dir_vk_build,\n",
+    "#         vk_build_out_dir=out_dir_vk_build,\n",
     "#         filters=conditions,\n",
-    "#         read_df_out=read_df_out,\n",
-    "#         mutation_metadata_df_out=mutation_metadata_df_out,\n",
+    "#         reads_csv_out=read_df_out,\n",
+    "#         mutations_updated_csv_out=mutation_metadata_df_out,\n",
     "#     )\n",
     "\n",
-    "#     read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"mutation_metadata_df\"]\n",
+    "#     read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"mutations\"]\n",
     "# else:\n",
     "#     read_df = pd.read_csv(read_df_out)\n",
     "#     mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
@@ -313,18 +291,16 @@
     "                condition_added_list = [condition, 'included_in_synthetic_reads-is_not_true']\n",
     "                \n",
     "                simulated_df_dict = vk.sim(\n",
-    "                    mutation_metadata_df = mutation_metadata_df,\n",
-    "                    fastq_output_path = read_fq_path_specific,\n",
-    "                    fastq_parent_path = synthetic_reads_fastQ,\n",
-    "                    read_df_parent=read_df,\n",
-    "                    sample_type=\"all\",\n",
+    "                    mutations = mutation_metadata_df,\n",
+    "                    reads_fastq_out = read_fq_path_specific,\n",
+    "                    reads_fastq_parent = synthetic_reads_fastQ,\n",
+    "                    reads_csv_parent=read_df,\n",
     "                    number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
     "                    strand=strand,\n",
     "                    k=k,\n",
     "                    w=w,\n",
-    "                    number_of_reads_per_sample=None,  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
-    "                    number_of_reads_per_sample_m=mutant_sequencing_depth,\n",
-    "                    number_of_reads_per_sample_w=wt_sequencing_depth,\n",
+    "                    number_of_reads_per_mutation_m=mutant_sequencing_depth,\n",
+    "                    number_of_reads_per_mutation_w=wt_sequencing_depth,\n",
     "                    read_length=read_length,\n",
     "                    seed=None,  # no need to pass in since it's set globally\n",
     "                    add_noise_sequencing_error=add_noise_sequencing_error,\n",
@@ -335,16 +311,15 @@
     "                    with_replacement=False,  # set to True if wanting to have some reads that might be identical\n",
     "                    filters=condition_added_list,\n",
     "                    sequences=sequences,\n",
-    "                    mutation_metadata_df_path=mutation_metadata_df_path,\n",
     "                    seq_id_column=seq_id_column,\n",
     "                    mut_column=mut_column,\n",
     "                    reference_out_dir=reference_out_dir,\n",
-    "                    out_dir_vk_build=out_dir_vk_build,\n",
-    "                    read_df_out=read_df_out,\n",
-    "                    mutation_metadata_df_out=mutation_metadata_df_out,\n",
+    "                    vk_build_out_dir=out_dir_vk_build,\n",
+    "                    reads_csv_out=read_df_out,\n",
+    "                    mutations_updated_csv_out=mutation_metadata_df_out,\n",
     "                )\n",
     "\n",
-    "                mutation_metadata_df, read_df = simulated_df_dict['mutation_metadata_df'], simulated_df_dict['read_df']\n",
+    "                mutation_metadata_df, read_df = simulated_df_dict['mutations'], simulated_df_dict['read_df']\n",
     "\n",
     "read_df = pd.read_csv(read_df_out)\n",
     "mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
