--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -2,37 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "from varseek.utils import create_mutant_t2g\n",
+    "varseek_directory = os.path.dirname(os.path.abspath(\"\"))\n",
+    "kallisto = \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/darwin/kallisto/kallisto\"\n",
+    "bustools = \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/darwin/bustools/bustools\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-12-02 19:02:45,850]    INFO [count] Using index /home/jrich/Desktop/varseek/tests/kb_files/index_test.idx to generate BUS file to /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired from\n",
-      "[2024-12-02 19:02:45,850]    INFO [count]         /home/jrich/Desktop/varseek/tests/kb_files/reads1_test.fq\n",
-      "[2024-12-02 19:02:45,850]    INFO [count]         /home/jrich/Desktop/varseek/tests/kb_files/reads2_test.fq\n",
-      "[2024-12-02 19:02:46,954]    INFO [count] Sorting BUS file /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/output.bus to /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/tmp/output.s.bus\n",
-      "[2024-12-02 19:02:49,962]    INFO [count] Inspecting BUS file /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/tmp/output.s.bus\n",
-      "[2024-12-02 19:02:51,067]    INFO [count] Generating count matrix /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/counts_unfiltered/cells_x_genes from BUS file /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/tmp/output.s.bus\n",
-      "[2024-12-02 19:02:52,187]    INFO [count] Writing gene names to file /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/counts_unfiltered/cells_x_genes.genes.names.txt\n",
-      "[2024-12-02 19:02:52,187] WARNING [count] 3 gene IDs do not have corresponding valid gene names. These genes will use their gene IDs instead.\n",
-      "[2024-12-02 19:02:52,187]    INFO [count] Reading matrix /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/counts_unfiltered/cells_x_genes.mtx\n",
-      "[2024-12-02 19:02:52,209]    INFO [count] Writing matrix to h5ad /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/counts_unfiltered/adata.h5ad\n"
+      "[2025-02-12 14:43:30,964]    INFO [count] Using index /Users/joeyrich/Desktop/local/varseek/tests/kb_files/index_test.idx to generate BUS file to /Users/joeyrich/Desktop/local/varseek/tests/kb_files/test_kb_count_out_2025 from\n",
+      "[2025-02-12 14:43:30,965]    INFO [count]         /Users/joeyrich/Desktop/local/varseek/tests/kb_files/reads1_test.fq\n",
+      "[2025-02-12 14:43:30,965]    INFO [count]         /Users/joeyrich/Desktop/local/varseek/tests/kb_files/reads2_test.fq\n",
+      "[2025-02-12 14:43:32,085]   ERROR [count] \n",
+      "[2025-02-12 14:43:32,085]   ERROR [main] An exception occurred\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/main.py\", line 1926, in main\n",
+      "    COMMAND_TO_FUNCTION[args.command](parser, args, temp_dir=temp_dir)\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/main.py\", line 714, in parse_count\n",
+      "    count(\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/ngs_tools/logging.py\", line 62, in inner\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/count.py\", line 1323, in count\n",
+      "    bus_result = kallisto_bus(\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/count.py\", line 223, in kallisto_bus\n",
+      "    run_executable(command)\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/dry/__init__.py\", line 25, in inner\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/utils.py\", line 203, in run_executable\n",
+      "    raise sp.CalledProcessError(p.returncode, ' '.join(command))\n",
+      "subprocess.CalledProcessError: Command '/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/darwin/kallisto/kallisto bus -i /Users/joeyrich/Desktop/local/varseek/tests/kb_files/index_test.idx -o /Users/joeyrich/Desktop/local/varseek/tests/kb_files/test_kb_count_out_2025 -x BULK -t 8 --num /Users/joeyrich/Desktop/local/varseek/tests/kb_files/reads1_test.fq /Users/joeyrich/Desktop/local/varseek/tests/kb_files/reads2_test.fq' died with <Signals.SIGILL: 4>.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import subprocess\n",
-    "from varseek.utils import create_mutant_t2g\n",
-    "\n",
-    "ref_fa = \"/home/jrich/Desktop/varseek/tests/kb_files/ref_test.fa\"\n",
-    "read1_fq = \"/home/jrich/Desktop/varseek/tests/kb_files/reads1_test.fq\"\n",
-    "read2_fq = \"/home/jrich/Desktop/varseek/tests/kb_files/reads2_test.fq\"\n",
-    "test_index = \"/home/jrich/Desktop/varseek/tests/kb_files/index_test.idx\"\n",
-    "test_t2g = \"/home/jrich/Desktop/varseek/tests/kb_files/t2g_test.txt\"\n",
-    "kb_count_out_test = \"/home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out\"\n",
+    "ref_fa = f\"{varseek_directory}/tests/kb_files/ref_test.fa\"\n",
+    "read1_fq = f\"{varseek_directory}/tests/kb_files/reads1_test.fq\"\n",
+    "read2_fq = f\"{varseek_directory}/tests/kb_files/reads2_test.fq\"\n",
+    "test_index = f\"{varseek_directory}/tests/kb_files/index_test.idx\"\n",
+    "test_t2g = f\"{varseek_directory}/tests/kb_files/t2g_test.txt\"\n",
+    "kb_count_out_test = f\"{varseek_directory}/tests/kb_files/test_kb_count_out_2025\"\n",
     "\n",
     "rnaseq_fastq_files_final = [read1_fq, read2_fq]\n",
     "os.makedirs(kb_count_out_test, exist_ok=True)\n",
@@ -45,10 +66,10 @@
     "    create_mutant_t2g(ref_fa, test_t2g)\n",
     "\n",
     "if not os.path.exists(kb_count_out_test) or len(os.listdir(kb_count_out_test)) == 0:\n",
-    "    kb_count_command = [\"kb\", \"count\", \"-t\", str(8), \"-i\", test_index, \"-g\", test_t2g, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"single\", \"-o\", kb_count_out_test] + rnaseq_fastq_files_final\n",
+    "    kb_count_command = [\"kb\", \"count\", \"-t\", str(8), \"-i\", test_index, \"-g\", test_t2g, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"single\", \"-o\", kb_count_out_test, \"--kallisto\", kallisto, \"--bustools\", bustools] + rnaseq_fastq_files_final\n",
     "    subprocess.run(kb_count_command, check=True)\n",
     "\n",
-    "# kb_count_out_test = \"/home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired\"\n",
+    "# kb_count_out_test = f\"{varseek_directory}/tests/kb_files/test_kb_count_out_paired\"\n",
     "# if not os.path.exists(kb_count_out_test) or len(os.listdir(kb_count_out_test)) == 0:\n",
     "#     kb_count_command = [\"kb\", \"count\", \"-t\", str(8), \"-i\", test_index, \"-g\", test_t2g, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"paired\", \"-o\", kb_count_out_test] + rnaseq_fastq_files_final\n",
     "#     subprocess.run(kb_count_command, check=True)"
@@ -56,29 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Read in 1 BUS records\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args='/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools text -o /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/bus_text.txt -f /home/jrich/Desktop/varseek/tests/kb_files/test_kb_count_out_paired/output.bus', returncode=0)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bustools = \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\"\n",
     "bus_text_file = os.path.join(kb_count_out_test, \"bus_text.txt\")\n",
     "bus_file = os.path.join(kb_count_out_test, \"output.bus\")\n",
     "bustools_text_command = f\"{bustools} text -o {bus_text_file} -f {bus_file}\"\n",
@@ -101,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "varseek2",
+   "display_name": "varseek",
    "language": "python",
    "name": "python3"
   },
@@ -115,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
