modified vk filter such that it outputs fasta and t2g files with headers rather than IDs by default, meaning that the count matrix column names will be immediately interpretable without needing the ID to header csv

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -8,10 +8,17 @@
    "source": [
     "import os\n",
     "import subprocess\n",
+    "import shutil\n",
+    "import sys\n",
     "from varseek.utils import create_mutant_t2g\n",
+    "\n",
     "varseek_directory = os.path.dirname(os.path.abspath(\"\"))\n",
-    "kallisto = \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/darwin/kallisto/kallisto\"\n",
-    "bustools = \"/Users/joeyrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/darwin/bustools/bustools\""
+    "\n",
+    "conda_env_path = os.path.dirname(os.path.dirname(shutil.which(\"kb\")))  # to get kb path\n",
+    "operating_system = \"linux\" if sys.platform.startswith(\"linux\") else \"darwin\"\n",
+    "\n",
+    "kallisto = f\"{conda_env_path}/lib/python3.10/site-packages/kb_python/bins/{operating_system}/kallisto/kallisto\"\n",
+    "bustools = f\"{conda_env_path}/lib/python3.10/site-packages/kb_python/bins/{operating_system}/bustools/bustools\""
    ]
   },
   {
