--- a/working.ipynb
+++ b/working.ipynb
@@ -170,10 +170,10 @@
       "        - reference_out_dir                  (str) Path to reference file directory to be downloaded if 'mutations' is a supported database and the file corresponding to 'sequences' does not exist.\n",
       "                                             Default: <out>/reference.\n",
       "        - mcrs_fasta_out                     (str) Path to output fasta file containing the VCRSs. \n",
-      "                                             If replace_original_headers=False, then the fasta headers will be the values in the column 'mut_ID' (semicolon-jooined if merge_identical=True).\n",
-      "                                             Otherwise, if replace_original_headers=True (default), then the fasta headers will be of the form 'vcrs_<int>' where <int> is a unique integer. Default: \"<out>/mcrs.fa\"\n",
+      "                                             If use_IDs=False, then the fasta headers will be the values in the column 'mut_ID' (semicolon-jooined if merge_identical=True).\n",
+      "                                             Otherwise, if use_IDs=True (default), then the fasta headers will be of the form 'vcrs_<int>' where <int> is a unique integer. Default: \"<out>/mcrs.fa\"\n",
       "        - mutations_updated_csv_out          (str) Path to output csv file containing the updated DataFrame. Only valid if save_mutations_updated_csv=True. Default: \"<out>/mutation_metadata_df.csv\"\n",
-      "        - id_to_header_csv_out               (str) File name of csv file containing the mapping of unique IDs to the original sequence headers if replace_original_headers=True. Default: \"<out>/id_to_header_mapping.csv\"\n",
+      "        - id_to_header_csv_out               (str) File name of csv file containing the mapping of unique IDs to the original sequence headers if use_IDs=True. Default: \"<out>/id_to_header_mapping.csv\"\n",
       "        - mcrs_t2g_out                       (str) Path to output t2g file containing the transcript-to-gene mapping for the MCRSs. Used in kallisto | bustools workflow. Default: \"<out>/mcrs_t2g.txt\"\n",
       "        - wt_mcrs_fasta_out                  (str) Path to output fasta file containing the wildtype sequence counterparts of the mutation-containing reference sequences (MCRSs). Default: \"<out>/wt_mcrs.fa\"\n",
       "        - wt_mcrs_t2g_out                    (str) Path to output t2g file containing the transcript-to-gene mapping for the wildtype MCRSs. Default: \"<out>/wt_mcrs_t2g.txt\"\n",
@@ -223,7 +223,7 @@
       "                                             headers for all identical sequences with semicolons). Default: False\n",
       "        - vcrs_strandedness                  (True/False) Whether to consider the forward and reverse-complement mutant sequences as distinct if merging identical sequences. Only effective when merge_identical is also True. Default: False\n",
       "                                             Default: False (ie do not consider forward and reverse-complement sequences to be equivalent)\n",
-      "        - replace_original_headers           (True/False) Whether to keep the original sequence headers in the output fasta file, or to replace them with unique IDs of the form 'vcrs_<int>.\n",
+      "        - use_IDs           (True/False) Whether to keep the original sequence headers in the output fasta file, or to replace them with unique IDs of the form 'vcrs_<int>.\n",
       "                                             If False, then an additional file at the path <id_to_header_csv_out> will be formed that maps sequence IDs from the fasta file to the <mut_id_column>. Default: True.\n",
       "        \n",
       "        # # specific databases\n",
@@ -1197,7 +1197,7 @@
        " 'min_seq_len',\n",
        " 'optimize_flanking_regions',\n",
        " 'remove_seqs_with_wt_kmers',\n",
-       " 'replace_original_headers',\n",
+       " 'use_IDs',\n",
        " 'required_insertion_overlap_length',\n",
        " 'save_files',\n",
        " 'vcrs_strandedness'}"
